# company_app

./: .env.example  .gitignore  DEPLOY_COMMANDS.md  DIGITALOCEAN_DROPLET_SETUP.sh  Dockerfile  README.md  deploy-digitalocean.sh  deploy-production.sh  pyproject.toml  response.logs
api/: README.md  main.py  test_api.py
backend/: README.md  __init__.py  config.py  logging_config.py  main.py
backend/extractors/: __init__.py  financial_rules.py  regex_extractor.py
backend/loaders/: __init__.py  pdf_loader.py
backend/output/: __init__.py  writer.py
backend/validators/: __init__.py  financial_validator.py
docs/: PROJECT_STRUCTURE.md  bank_statement_extractor_implementation_doc.md
frontend/: README.md  app.py
