[project]
name = "text-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.7",
    "pymupdf>=1.26.7",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.9",
    "streamlit>=1.40.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
